Mon Dec 20 13:49:01 1999  Gonzalo A. Diethelm  <Gonzalo.Diethelm@jda.cl>

	* source/rdd/dbcmd.c: 
	* source/rtl/classes.c: 
	Fixed two minor warnings.

19991219-14:35 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/harbour.l
	* fixed recognition of 'DO &var WITH' syntax
    
19991219-15:55 GMT+3 Alexander Kresin
  * source/pp/hbpp.c
    * Bug fixed, reported by Victor Szel

19991218-18:25 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *include/hbexpr.c
        * static variables can be initialised with arrays that
        contains parenthesized epressions e.g. STATIC a:={ (1) }
        * fixed code that handles aliased macro expressions
        e.g. FIELD->&var1 := var2

19991218-10:35 GMT+1 Victor Szel <info@szelvesz.hu>
  * source/rtl/objfunc.prg
    source/rtl/readkey.prg
    + Added documentation by Chen Kedem.
  * source/compiler/cmdcheck.c
    ! Fixed handling of the /q0 switch. (Provided by Jose)

19991217-16:40 EDT David G. Holm <dholm@jsd-llc.com>

   * config/os2/icc.cf
     + I added the /NOIGNORECASE option to both the librarian and the linker,
       because C++ can't tell the difference between 'int hb_pcount( void )'
       and 'HARBOUR HB_PCOUNT( void )' unless a case-sensitive link is used.
       This requires rebuilding all of Harbour if you are using OS/2 and the
       IBM C++ compiler (i.e., make -r clean).

19991216-15:50 GMT+1 Bruno Cantero <bruno@issnet.net>
  * include/extend.h
    + Added a new item type: IT_POINTER ( USHORT ) 0x0001
    + Added two defines:
      #define IS_POINTER( p )    IS_OF_TYPE( p, IT_POINTER )
      #define ISPOINTER( n )     ( hb_param( n, IT_POINTER ) != NULL )
    + Added two prototypes:
      extern HB_MACRO_PTR hb_macroCompile( char * )
      extern void hb_macroDelete( HB_MACRO_PTR )

  * include/itemapi.h
    + Added two prototypes for manipulate items (IT_POINTER):
      extern void * hb_itemGetPtr( PHB_ITEM );
      extern PHB_ITEM hb_itemPutPtr( PHB_ITEM pItem, void * pValue )
